# harness-cd

./: .gitignore  AGENT.md  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: claim_auditor.toml  corpus_mapper.toml  pattern_librarian.toml  quote_analyst.toml  report_editor.toml  thread_reader.toml
configs/avatar_states/: jaw_clenching_nighttime_spike.json
data/: README.md
docs/: avatar-state-research-system.md  founder-grade-memory-workflow.md  reviewer-workflow.md  thread-merge-methodology.md
outputs/: avatar_dossier.md  avatar_profile.json
prompts/: ad_angle_bank.prompt.md  avatar_dossier.prompt.md  compliance_audit.prompt.md  founder_grade_run_prompt.md  lander_angles.prompt.md  mechanism_lab.prompt.md
schemas/: ad_angle_bank.schema.json  avatar_profile.schema.json  compliance_audit.schema.json  lander_angle_bank.schema.json  mechanism_hypotheses.schema.json  pattern_ledger.schema.json  report_state.schema.json  thread_card.schema.json
scripts/: build_avatar_report.py  build_avatar_state_slice.py  build_avatar_workspace.py  build_research_packs.py  extract_quote_candidates.py  ingest_arcticshift.py  refresh_founder_memory.py  sample_threads.py  update_research_corpus.py  validate_evidence_refs.py
src/reddit_dr_harness/: __init__.py  avatar_state.py  corpus_metrics.py  founder_memory.py  ingest.py  quotes.py  validate.py
tests/: conftest.py  test_avatar_state.py  test_corpus_metrics.py  test_founder_memory.py  test_ingest.py  test_quote_extractor.py  test_validate.py
tests/fixtures/: comments.jsonl  (+1 more)
(+15 files in other folders)
